# ChatSoftware

./: database_3.db
Client/: .gitignore  CMakeLists.txt
Client/.cache/clangd/index/: Dialog.cpp.B55807BB07375FE6.idx  Dialog.h.52E411C389857EC1.idx  Friend.cpp.B5BA3C141607484E.idx  Friend.h.01EB8695B3FDFA92.idx  Friends.cpp.72783D158FFD090E.idx  Friends.h.3FD88E5C7CC90885.idx  IP.h.AC28470B71FF50E7.idx  Index.cpp.FE2450D05AB4329F.idx  Index.h.FD957C83CFBCBC8A.idx  Login.cpp.A5953E1EB3CD84E7.idx  Login.h.35C4CDCC19DA076F.idx  MainWindow.cpp.19759C95DB863517.idx  MainWindow.h.70BB047B8054E3DD.idx  MessageProtocol.cpp.216E636899FFAEBC.idx  MessageProtocol.h.A46AD985629B16AA.idx  Register.cpp.E1220668D3D1ED97.idx  Register.h.E1AEA29B8DF4CCA4.idx  SearchFriends.cpp.7AFE3944F96117CD.idx  SearchFriends.h.63EEFA0B948DA942.idx  SqliteHandler.cpp.FD7CE26BCD0988EE.idx  SqliteHandler.h.1220D24B8F9697BA.idx  TextArea.cpp.1F13DC8982543EFB.idx  TextArea.h.A19391522BF5F078.idx  User.h.6354752347F5C9EA.idx  main.cpp.560D143DF8B1E012.idx
Client/headers/: Dialog.h  Friend.h  FriendAddApplyList.h  FriendOption.h  Friends.h  Index.h  Login.h  MainWindow.h  MessageProtocol.h  MessageProtocol.hpp  Navigation.h  Register.h  SearchFriends.h  SqliteHandler.h  TextArea.h  Toast.h  User.h
Client/resources/: GlassButton.hpp  GlassWindow.hpp  IP.h
Client/resources/qss/: a1.qss  a2.qss
Client/src/: Dialog.cpp  Friend.cpp  FriendAddApplyList.cpp  FriendOption.cpp  Friends.cpp  Index.cpp  Login.cpp  MainWindow.cpp  MessageProtocol.cpp  Navigation.cpp  Register.cpp  SearchFriends.cpp  SqliteHandler.cpp  TextArea.cpp  Toast.cpp  main.cpp
Server/: .gitignore  CMakeLists.txt
Server/.cache/clangd/index/: DatabaseHandler.cpp.5D8B0C6371D980CF.idx  (+10 more)
Server/headers/: DatabaseHandler.h  MessageProtocol.h  TcpServer.h  User.h  myTcpServer.h  socketHandler.h
Server/src/: DatabaseHandler.cpp  MessageProtocol.cpp  TcpServer.cpp  main.cpp  myTcpServer.cpp  socketHandler.cpp
